--- a/sign-in.html
+++ b/sign-in.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <div class="login-box">
-      <div class="logo-login">
+      <div class="login">
         <img src="./Assets/Images/logo-white bg.png" />
-        <span class="login">Login</span>
+        <span class="login-text">Login</span>
         <div class="login-credentials">
-          <p class="email-phone credential">Email or mobile phone number</p>
+          <p class="email-phone credential">
+            Email or mobile phone number
+          </p>
           <input type="text" id="email-or-phone-input" />
           <p class="password credential">Password</p>
           <input type="text" id="password-input" />
