created hero section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ZestMe</title>
     <link rel="icon" type="image/x-con" href="./Assets/Images/file.png" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/hero.css" />
     <script
       src="https://kit.fontawesome.com/6b47e78300.js"
       crossorigin="anonymous"
@@ -14,9 +15,9 @@
   <body>
     <section class="header">
       <a href="#"><img src="./Assets/Images/logo.png" /></a>
-      <span class="slogan">Where Every Product is Uniquely Yours</span>
+      <span class="slogan"><b>Where Every Product is Uniquely Yours</b></span>
       <ul class="navbar">
-        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="sign-in.html">Sign in</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="about.html">About</a></li>
@@ -25,6 +26,16 @@
           <a><i class="fa-solid fa-cart-shopping"></i></a>
         </li>
       </ul>
+    </section>
+
+    <section class="hero">
+      <div class="hero-content">
+        <h4>Unleash Your Creativity with Personalized Perfection</h4>
+        <h2>Design Your Perfect Piece</h2>
+        <h1>Super value deals</h1>
+        <button>Shop Now</button>
+      </div>
+      <img src="./Assets/Images/hero-image.png" />
     </section>
   </body>
 </html>
