--- a/sign-up.html
+++ b/sign-up.html
@@ -13,7 +13,11 @@
         <span class="welcome">Welcome to ZestMe</span>
         <div class="sign-up-credentials"></div>
         <p class="phone credential">Enter your phone number below</p>
-        <input type="number" id="phone-input" placeholder="Enter phone number" />
+        <input
+          type="number"
+          id="phone-input"
+          placeholder="Enter phone number"
+        />
         <button id="req-code">Request OTP</button>
       </div>
     </div>
