displayed feeatured products using javascript

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZestMe</title>
-    <link rel="icon" type="image/x-con" href="./Assets/Images/file.png" />
+    <link rel="icon" type="image/x-con" href="./Assets/Images/favicon.png" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/hero.css" />
+    <link rel="stylesheet" href="./styles/feature.css" />
+    <link rel="stylesheet" href="./styles/featured-products.css" />
     <script
       src="https://kit.fontawesome.com/6b47e78300.js"
       crossorigin="anonymous"
@@ -37,5 +39,44 @@
       </div>
       <img src="./Assets/Images/hero-image.png" />
     </section>
+
+    <section class="features">
+      <div class="feature1 feature">
+        <img src="./Assets/Images/features/fast-delivery.jpeg" />
+        <p>Fast Delivery</p>
+      </div>
+      <div class="feature2 feature">
+        <img src="./Assets/Images/features/free shipping.jpg" />
+        <p>Free Shipping</p>
+      </div>
+      <div class="feature3 feature">
+        <img src="./Assets/Images/features/easy-returns.png" />
+        <p>Easy Returns</p>
+      </div>
+      <div class="feature4 feature">
+        <img src="./Assets/Images/features/247-customer-support.jpg" />
+        <p>24/7 Support</p>
+      </div>
+    </section>
+
+    <section class="featured-section">
+      <h4>Featured Products</h4>
+      <div class="featured-product-list" id="featured-products">
+      </div>
+    </section>
+
+    <section class="newsletter"></section>
+
+    <section class="customized-products"></section>
+
+    <section class="refer"></section>
+
+    <section class="best-sellers"></section>
+
+    <section class="banners"></section>
+
+    <section class="footer"></section>
+
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
