--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/hero.css" />
     <link rel="stylesheet" href="./styles/feature.css" />
     <link rel="stylesheet" href="./styles/featured-products.css" />
+    <link rel="stylesheet" href="./styles/newsletter.css" />
     <script
       src="https://kit.fontawesome.com/6b47e78300.js"
       crossorigin="anonymous"
@@ -61,11 +62,20 @@
 
     <section class="featured-section">
       <h4>Featured Products</h4>
-      <div class="featured-product-list" id="featured-products">
-      </div>
+      <div class="featured-product-list" id="featured-products"></div>
     </section>
 
-    <section class="newsletter"></section>
+    <section class="newsletter">
+      <img src="./Assets/Images/Banner/b1.jpg" />
+      <div class="description">
+        <p class="head">Subscribe to our newsletter</p>
+        <p class="info">Get updates about the latest products and offers!</p>
+        <div class="email">
+          <input type="text" placeholder="Enter your email address" />
+          <button>Submit</button>
+        </div>
+      </div>
+    </section>
 
     <section class="customized-products"></section>
 
@@ -75,7 +85,7 @@
 
     <section class="banners"></section>
 
-    <section class="footer"></section>
+    <sections class="footer"></sections>
 
     <script src="./scripts/main.js"></script>
   </body>
