--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/hero.css" />
     <link rel="stylesheet" href="./styles/feature.css" />
-    <link rel="stylesheet" href="./styles/featured-products.css" />
+    <link rel="stylesheet" href="./styles/home prducts.css" />
     <link rel="stylesheet" href="./styles/newsletter.css" />
     <script
       src="https://kit.fontawesome.com/6b47e78300.js"
@@ -60,9 +60,17 @@
       </div>
     </section>
 
-    <section class="featured-section">
+    <section class="featured-section product-display">
       <h4>Featured Products</h4>
       <div class="featured-product-list" id="featured-products"></div>
+      <div class="buttons">
+        <button class="prev1">
+          <i class="fa-solid fa-greater-than" style="color: #000000"></i>
+        </button>
+        <button class="next1">
+          <i class="fa-solid fa-greater-than" style="color: #000000"></i>
+        </button>
+      </div>
     </section>
 
     <section class="newsletter">
@@ -77,7 +85,18 @@
       </div>
     </section>
 
-    <section class="customized-products"></section>
+    <section class="customized-products product-display">
+      <h4>Customizable Products</h4>
+      <div class="Customizable-product-list" id="Customizable-products"></div>
+      <div class="buttons">
+        <button class="prev2">
+          <i class="fa-solid fa-greater-than" style="color: #000000"></i>
+        </button>
+        <button class="next2">
+          <i class="fa-solid fa-greater-than" style="color: #000000"></i>
+        </button>
+      </div>
+    </section>
 
     <section class="refer"></section>
 
