created referral banner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/feature.css" />
     <link rel="stylesheet" href="./styles/home prducts.css" />
     <link rel="stylesheet" href="./styles/newsletter.css" />
+    <link rel="stylesheet" href="./styles/refer.css" />
     <script
       src="https://kit.fontawesome.com/6b47e78300.js"
       crossorigin="anonymous"
@@ -98,7 +99,17 @@
       </div>
     </section>
 
-    <section class="refer"></section>
+    <section class="refer">
+      <img src="./Assets/Images/Banner/b2.jpg">
+      <div class="description">
+        <p class="head">More than you expect</p>
+        <p class="info">Refer to your friends and earn rewards</p>
+        <div class="refer-link">
+          <p>https://ZestMeref-r.com/14457783</p>
+          <button id="copy-link">Copy</button>
+        </div>
+      </div>
+    </section>
 
     <section class="best-sellers"></section>
 
