--- a/index.html
+++ b/index.html
@@ -111,7 +111,18 @@
       </div>
     </section>
 
-    <section class="best-sellers"></section>
+    <section class="best-sellers product-display">
+      <h4>Bestsellers</h4>
+      <div class="Bestseller-product-list" id="Bestseller-products"></div>
+      <div class="buttons">
+        <button class="prev3">
+          <i class="fa-solid fa-greater-than" style="color: #000000"></i>
+        </button>
+        <button class="next3">
+          <i class="fa-solid fa-greater-than" style="color: #000000"></i>
+        </button>
+      </div>
+    </section>
 
     <section class="banners"></section>
 
